--- a/src/index.html
+++ b/src/index.html
@@ -71,33 +71,47 @@
 
             <ul class="nav menu__nav">
               <li
-                class="nav__link"
-                href="https://namu.ua/"
+
               >
-              галерея
+                <a
+                  class="nav__link"
+                  href="#gallery"
+                >
+                  галерея
+                </a>
+
               </li>
 
               <li
-                class="nav__link"
-                href="https://namu.ua/"
+
               >
-              про нас
+                <a
+                  class="nav__link"
+                  href="#about-us"
+                >
+                  про нас
+                </a>
               </li>
 
               <li
-                class="nav__link"
-                href="https://namu.ua/"
+
               >
-                виставки та
-                <br>
-                події
+                <a
+                  class="nav__link"
+                  href="#events"
+                >
+                  виставки та події
+                </a>
+
               </li>
 
-              <li
+              <li>
+                <a
                 class="nav__link"
-                href="https://namu.ua/"
-              >
-              контакти
+                href="#contacts"
+                >
+                контакти
+                </a>
               </li>
             </ul>
           </div>
@@ -135,7 +149,7 @@
       <div class="menu__transparency"></div>
     </nav>
     <main>
-      <section class="page__section events">
+      <section class="page__section--events events" id="events">
         <div class="container">
           <h2 class="events__title">Aктуальні події</h2>
 
@@ -183,7 +197,19 @@
         </div>
       </section>
 
-      <section class="page__section gallery">
+      <section class="page__section--lection lection">
+        <div class="container">
+          <div class="lection__info">
+            <div class="lection__date-info">
+              <p class="lection__subtitle">лекція</p>
+              <p class="lection__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lection__name">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title">Галерея</h2>
           <div class="gallery__photos">
@@ -238,20 +264,7 @@
         </div>
 
       </section>
-
-      <section class="page__section--lection lection">
-        <div class="container">
-          <div class="lection__info">
-            <div class="lection__date-info">
-              <p class="lection__subtitle">лекція</p>
-              <p class="lection__date">26/08/2019 - 11:00</p>
-            </div>
-            <h3 class="lection__name">Від класицизму до романтизму</h3>
-          </div>
-        </div>
-      </section>
     </main>
-
 
     <section class="page__section subscription">
       <div class="container">
@@ -324,7 +337,7 @@
 
         </div>
 
-        <div class="footer__info footer__grid--info">
+        <div class="footer__info footer__grid--info" id="about-us">
           <div class="schedule schedule--footer footer__grid--schedule">
             <div class="schedule__weekdays">
               <h2 class="schedule__title">графік роботи</h2>
@@ -361,7 +374,7 @@
             </p>
           </div>
 
-          <div class="footer__contacts ">
+          <div class="footer__contacts" id="contacts">
             <h3 class="footer__contacts-title">Контакти:</h3>
             <p class="footer__contacts-address">
               <a
@@ -424,7 +437,7 @@
             <li
               class="nav__link"
             >
-              <a class="nav__link--footer" href="#exhibitions-and-events">виставки та події</a>
+              <a class="nav__link--footer" href="#events">виставки та події</a>
             </li>
 
             <li
