--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body page__body--with-menu" id="#">
-    <header class="page__section header">
+    <header class="page__section--header header">
       <div class="container">
         <div class="header__background">
           <a href="#" class="logo header__logo">
