footer done + arrow added

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 
     <!-- HEADER -->
-    <div class="header" >
+    <div class="header" id="header">
       <div class="header__background-container">
         <div class="header__background-image"></div>
 
@@ -209,13 +209,22 @@
                     </div>
 
                     <div class="schedule-block__container schedule-block__container--footer">
-                      <div class="schedule-block__time schedule-block__time--footer">
+                      <div class="
+                        schedule-block__time
+                        schedule-block__time--footer
+                        schedule-block__time--footer-arrow"
+                      >
                         вул. М. Грушевського, 6; Київ, 01001<br>
                         тел. +38 (044) 278&#8209;13&#8209;57<br>
                         факс +38 (044) 278&#8209;74&#8209;54<br>
                         e-mail: info@namu.kiev.ua
                       </div>
                     </div>
+
+                    <div class="footer__up-arrow">
+                      <a href="#header" class="icon icon--up-arrow"></a>
+                    </div>
+
                   </div>
                 </div>
               </div>
@@ -227,6 +236,7 @@
                 </div>
               </div>
 
+              <!-- NAV-BLOCK -->
               <div class="
                 grid__item--tablet-2-5
                 grid__item--desktop-8-11"
