--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,461 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      rel="shortcut icon"
+      href="images/logo.svg"
+      type="image/svg"
+    >
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container header__container">
+        <div class="header__top-actions">
+          <a href="#menu" class="header__top-actions_menu"></a>
+
+          <a href="#" class="header__top-actions_logo"></a>
+        </div>
+
+        <div class="grid">
+          <h1 class="
+            header__title
+            grid__item--1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-1-4
+            ">
+            художній <br> музей
+          </h1>
+
+          <div class="
+            header__button-container
+            grid__item--1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-2-5
+          ">
+            <p class="header__paragraf">квитки</p>
+            <div class="header__button button"></div>
+          </div>
+
+          <div class="header__ivent">
+            <div class="header__ivent-arr"></div>
+            <p class="header__ivent_text">події</p>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="page__menu menu" id="menu">
+      <div class="container menu__container">
+        <a href="#" class="menu__cross"></a>
+
+        <div class="menu__content">
+          <nav class="menu__nav">
+            <ul class="menu__nav-list">
+              <div class="menu__nav-list-col">
+                <li class="menu__nav-item">
+                  <a
+                    class="menu__nav-link"
+                    href="#galery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="menu__nav-item">
+                  <a
+                    class="menu__nav-link"
+                    href="#ivent"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+              </div>
+
+              <div class="menu__nav-list-col">
+                <li class="menu__nav-item">
+                  <a
+                    class="menu__nav-link"
+                    href="#footer"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="menu__nav-item">
+                  <a
+                    class="menu__nav-link"
+                    href="#footer"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__wh">
+            <h2 class="menu__wh-title">Графік роботи</h2>
+
+            <div class="menu__wh-paragraf-container">
+              <p class="menu__wh-paragraf">
+                <strong>12:00 — 20:00</strong> середа <br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя <br>
+              </p>
+              <p class="menu__wh-paragraf">
+                <strong>Вихідні:</strong> понеділок, <br> вівторок <br>
+                Каса припиняє роботу за <br> 1 годину
+                до закриття <br> музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <main>
+      <section class="page__section ivent" id="ivent">
+        <div class="container">
+          <h2 class="ivent__title">
+            Актуальні події
+          </h2>
+          <div class="grid">
+            <div class="
+              ivent__image
+              ivent__image--1
+              grid__item--1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7
+            ">
+            </div>
+
+            <div class="
+              ivent__desk
+              grid__item--1-2
+              grid__item--tablet-1-4
+              grid__item--desktop-9-12
+            ">
+              <div class="ivent__desk-time">
+                <div class="ivent__desk-time-iventName">
+                  виставка
+                </div>
+                <div class="ivent__desk-time-date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <div class="ivent__desk-title-container">
+                <h3 class="ivent__desk-title">
+                  Йду і повертаюсь
+                </h3>
+
+                <div class="ivent__desk-squere"></div>
+              </div>
+
+              <p class="ivent__desk-paragraf">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+            <div class="
+              ivent__image
+              ivent__image--2
+              grid__item--1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7
+            ">
+            </div>
+
+            <div class="
+              ivent__desk
+              grid__item--1-2
+              grid__item--tablet-1-4
+              grid__item--desktop-9-12
+            ">
+              <div class="ivent__desk-time">
+                <div class="ivent__desk-time-iventName">
+                  виставка
+                </div>
+                <div class="ivent__desk-time-date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <div class="ivent__desk-title-container">
+                <h3 class="ivent__desk-title">
+                  І спогади і мрії
+                </h3>
+
+                <div class="ivent__desk-squere"></div>
+              </div>
+
+              <p class="ivent__desk-paragraf">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="ivent__bottom">
+          <div class="ivent__bottom-card">
+            <div class="ivent__bottom-card-content">
+              <div class="ivent__bottom-card-time">
+                <div class="ivent__bottom-card-time-iventName">
+                  виставка
+                </div>
+                <div class="ivent__bottom-card-time-date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <h3 class="ivent__bottom-card-title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section galery" id="galery">
+        <div class="container">
+          <h2 class="galery__title">
+            Галерея
+          </h2>
+
+          <div class="grid galery__content">
+            <div class="
+              galery__image
+              galery__image--1
+              grid__item--desktop-1-4
+            ">
+            </div>
+
+            <div class="
+              galery__image
+              galery__image--2
+              grid__item--desktop-5-12
+            ">
+            </div>
+
+            <div class="
+              galery__image
+              galery__image--3
+              grid__item--desktop-1-8
+            ">
+            </div>
+
+            <div class="
+              galery__image
+              galery__image--4
+              grid__item--desktop-9-12
+            ">
+            </div>
+          </div>
+
+          <div class="galery__swiper">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide swiper-slide--1"></div>
+
+                <div class="swiper-slide swiper-slide--2"></div>
+
+                <div class="swiper-slide swiper-slide--3"></div>
+
+                <div class="swiper-slide swiper-slide--4"></div>
+
+                <div class="swiper-slide swiper-slide--5"></div>
+              </div>
+            </div>
+
+            <div id="swiper-pagination" class="swiper-pagination"></div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="page__section subscribe">
+        <div class="container">
+          <h2 class="subscribe__title">Підписка</h2>
+
+          <p class="subscribe__paragraf">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <form
+            action="#"
+            class="form subscribe__form"
+            id="form"
+          >
+            <input
+              name="email"
+              type="email"
+              class="form__field"
+              placeholder="E-mail"
+              required
+            >
+            <button class="button form__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="
+            footer__first-conteiner
+            footer__first-conteiner--top
+            ">
+            <a href="#" class="footer__logo"></a>
+
+            <div class="footer__first-conteiner-links">
+              <a href="#" class="
+                footer__first-conteiner-link
+                footer__first-conteiner-link--facebook
+              "></a>
+
+              <a href="#" class="
+                footer__first-conteiner-link
+                footer__first-conteiner-link--instagram
+              "></a>
+            </div>
+          </div>
+
+          <div class="footer__con-wh-container">
+            <div class="
+              footer__first-conteiner
+              footer__con-wh-container--logo
+              ">
+              <a href="#" class="footer__logo"></a>
+
+              <div class="footer__first-conteiner-links">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/"
+                  class="
+                    footer__first-conteiner-link
+                    footer__first-conteiner-link--facebook
+                "></a>
+
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/"
+                  class="
+                    footer__first-conteiner-link
+                    footer__first-conteiner-link--instagram
+                "></a>
+              </div>
+            </div>
+
+            <div class="footer__wh">
+              <h2 class="footer__wh-title">Графік роботи:</h2>
+
+              <div class="footer__wh-paragraf-container">
+                <p class="footer__wh-paragraf">
+                  <strong>12:00 — 20:00</strong> середа <br>
+                  <strong>12:00 — 20:00</strong> четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя <br>
+                </p>
+                <p class="footer__wh-paragraf">
+                  <strong>Вихідні:</strong> понеділок, <br> вівторок <br>
+                  Каса припиняє роботу за <br> 1 годину
+                  до закриття <br> музею
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__contacts">
+              <h2 class="footer__contacts-title">Контакти:</h2>
+
+              <p class="footer__contacts-paragraf">
+                <a target="_blank" href="https://goo.gl/maps/P1MiJo6caRNzSjgE6">
+                  вул. М. Грушевського, <br> 6; Київ, 01001 <br>
+                </a>
+                <a href="tel:+38 (044) 278-13-57">
+                  тел: +38 (044) 278-13-57
+                </a><br>
+                <a href="tel:+38 (044) 278-13-57">
+                  факс: +38 (044) 278-13-57
+                </a><br>
+                <a href="e-mail:info@namu.kiev.ua">
+                  e-mail: info@namu.kiev.ua
+                </a><br>
+              </p>
+            </div>
+          </div>
+
+          <a href="#" class="footer__goTop"></a>
+          <div class="footer__line"></div>
+
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <div class="footer__nav-list-col">
+                <li class="footer__nav-item">
+                  <a
+                    class="footer__nav-link"
+                    href="#galery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="footer__nav-item">
+                  <a
+                    class="footer__nav-link"
+                    href="#ivent"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+              </div>
+
+              <div class="footer__nav-list-col">
+                <li class="footer__nav-item">
+                  <a
+                    class="footer__nav-link"
+                    href="#footer"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="footer__nav-item">
+                  <a
+                    class="footer__nav-link"
+                    href="#footer"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__credits">
+          <p class="footer__credits-text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__credits-text">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
