--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,8 @@
                 </a>
                 <a
                   class="button__press"
-                  href="#tickets"
-                  target="_blank"
+                  href="#events"
+
                 ></a>
               </div>
             </div>
@@ -142,6 +142,198 @@
         </div>
       </div>
     </div>
+
+    <section class="events" id="events">
+      <div class="container">
+        <h2 class="events__title"> Актуальні події</h2>
+        <div class="events grid">
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-1-6"
+          >
+            <img
+              src="/images/photo1.png"
+              alt="Йду і повертаюсь"
+              class="events__image"
+            >
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-4
+            grid__item--desktop-9-12"
+          >
+            <div class="events__top">
+              <div class="events__type"> ВИСТАВКА</div>
+
+              <div class="events__data">26.08-29.11.2019</div>
+            </div>
+
+            <div class="events__line">
+              <div class="events__name"> Йду і повертаюсь </div>
+              <img
+                src="/images/orange.svg"
+                alt="x"
+                class="events__img"
+              >
+            </div>
+
+            <div class="events__description"> Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-1-6"
+          >
+            <img
+              src="/images/photo2.png"
+              alt="І спогади і мрії"
+              class="events__image"
+            >
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-4
+            grid__item--desktop-9-12"
+          >
+            <div class="events__top">
+              <div class="events__type"> ВИСТАВКА</div>
+              <div class="events__data">26.08-29.11.2019</div>
+            </div>
+
+            <div class="events__line">
+              <div class="events__name"> І спогади і мрії </div>
+              <img
+                src="/images/orange.svg"
+                alt="x"
+                class="events__img"
+              >
+            </div>
+
+            <div class="events__description"> Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+          </div>
+        </div>
+      </div>
+      <div class="lecture__about">
+        <img
+          src="/images/photo3.png"
+          alt="Від класицизму до романтизму"
+          class="lecture__img"
+        >
+        <div class="container">
+          <div class="lecture__info">
+            <div class="lecture__details">
+              <div class="events__type"> ЛЕКЦІЯ</div>
+              <div class="events__data">26/08/2019 - 11:00</div>
+            </div>
+
+            <div class="events__name"> Від класицизму до романтизму </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="grid">
+          <div class="
+             grid__item--mobile-1-2
+             grid__item--tablet-1-2
+             grid__item--desktop-1-4"
+           >
+            <img
+              src="/images/gallery1.png"
+              alt="painting"
+              class="gallery__first"
+            >
+          </div>
+
+          <div class="
+             grid__item--mobile-1-2
+             grid__item--tablet-3-6
+             grid__item--desktop-5-12"
+           >
+            <img
+              src="/images/gallery2.png"
+              alt="painting"
+              class="gallery__first"
+            >
+          </div>
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-4
+            grid__item--desktop-1-8"
+          >
+            <img
+              src="/images/gallery3.png"
+              alt="painting"
+              class="gallery__second"
+            >
+          </div>
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-4-6
+            grid__item--desktop-9-12"
+          >
+            <img
+              src="/images/gallery4.png"
+              alt="painting"
+              class="gallery__second"
+            >
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe" id="about-us">
+      <div class="subscribe__img">
+        <div class="container">
+          <div class="subscribe__content grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-5-8"
+            >
+
+              <h2 class="subscribe__title">Підписка</h2>
+
+              <p class="subscribe__about" >Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-4-9"
+            >
+
+              <form
+                action="#"
+                id="form"
+                class="subscribe__form"
+
+              >
+                <input
+                  type="email"
+                  name="Email"
+                  placeholder="Email"
+                  class="subscribe__email subscribe__form"
+                  required
+                >
+                <button class="subscribe__button" type="submit">
+                  <img src="/images/Vectorblack.png" alt="x">
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <footer class="footer page__footer">
     <div class="container">
@@ -159,7 +351,8 @@
               <img
                 src="/images/Facebook.svg"
                 alt="Facebook"
-                class="footer__network--logo">
+                class="footer__network--logo"
+              >
             </a>
 
             <a
@@ -178,7 +371,7 @@
 
         <div class="work-schedule footer__work">
           <h2 class="work-schedule__title--footer">
-          Графік роботи
+            Графік роботи
           </h2>
 
           <div class="work-schedule__schedule-container">
@@ -195,8 +388,8 @@
 
               <strong class="work-schedule__schedule--bottom"> Вихідні: </strong> понеділок, вівторок
               <br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
+              Каса припиняє роботу за 1 годину
+              до закриття музею
             </div>
           </div>
         </div>
@@ -209,7 +402,7 @@
             target="_blank"
             class="footer__contacts"
           >
-          вул. М. Грушевського, 6; Київ, 01001
+            вул. М. Грушевського, 6; Київ, 01001
           </a>
           <p>тел. <a href="tel:+38 (044) 278-13-57" class="footer__contacts"> +38 (044) 278-13-57</a></p>
 
@@ -221,7 +414,7 @@
               target="_blank"
               class="footer__contacts"
             >
-               info@namu.kiev.ua
+              info@namu.kiev.ua
             </a>
           </p>
         </div>
