--- a/src/index.html
+++ b/src/index.html
@@ -90,13 +90,13 @@
                     <ul class="nav-block__list">
                       <div class="nav-block__group">
                         <li class="nav-block__item">
-                          <a href="#" class="nav-block__link">
+                          <a href="#gallery" class="nav-block__link">
                             Галерея
                           </a>
                         </li>
 
                         <li class="nav-block__item">
-                          <a href="#" class="nav-block__link">
+                          <a href="#events" class="nav-block__link">
                             Виставки та події
                           </a>
                         </li>
@@ -104,13 +104,13 @@
 
                       <div class="nav-block__group">
                         <li class="nav-block__item">
-                          <a href="#" class="nav-block__link">
+                          <a href="#subscribe" class="nav-block__link">
                             Про нас
                           </a>
                         </li>
 
                         <li class="nav-block__item">
-                          <a href="#" class="nav-block__link">
+                          <a href="#footer" class="nav-block__link">
                             Контакти
                           </a>
                         </li>
@@ -156,8 +156,171 @@
       <div class="menu__grey-zone"></div>
     </div>
 
+    <!-- TITLE-BLOCK -->
+    <div class="title-block">
+      <div class="arc">
+        Актуальні події
+      </div>
+    </div>
+
+    <!-- EVENT`s -->
+    <div class="arc" id="events">
+      <section class="events" id="events">
+        <div class="grid grid--screen">
+          <div class="
+            grid__item--desktop-1-7
+            grid__item--tablet-1-6"
+          >
+            <div class="events__photo-container">
+              <img src="./images/Rectangle 2.3.jpg" alt="Йду і повертаюсь" class="events__photo">
+            </div>
+          </div>
+
+          <div class="
+            grid__item--desktop-9-12
+            grid__item--tablet-1-4"
+          >
+            <div class="events__description-container">
+              <div class="events__description-block">
+                <div class="events__date-block">
+                  <div class="events__name">
+                    ВИСТАВКА
+                  </div>
+
+                  <div class="events__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <a href="https://namu.ua/" class="events__details-block">
+                  <div class="events__title-container">
+                    <div class="events__title">
+                      Йду і повертаюсь
+                    </div>
+
+                    <div class="events__orange-rectangle"></div>
+                  </div>
+
+                  <div class="events__description">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="events">
+        <div class="grid grid--screen">
+          <div class="
+            grid__item--desktop-1-7
+            grid__item--tablet-1-6"
+          >
+            <div class="events__photo-container">
+              <img src="./images/Rectangle 4.3.jpg" alt="І спогади і мрії" class="events__photo">
+            </div>
+          </div>
+
+          <div class="
+            grid__item--desktop-9-12
+            grid__item--tablet-1-4"
+          >
+            <div class="events__description-container">
+              <div class="events__description-block">
+                <div class="events__date-block">
+                  <div class="events__name">
+                    ВИСТАВКА
+                  </div>
+
+                  <div class="events__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <a href="https://namu.ua/" class="events__details-block">
+                  <div class="events__title-container">
+                    <div class="events__title">
+                      І спогади і мрії
+                    </div>
+
+                    <div class="events__orange-rectangle"></div>
+                  </div>
+
+                  <div class="events__description">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- LECTION -->
+    <div class="lection" id="lection">
+      <div class="lection__container">
+        <div class="lection__photo">
+
+          <a href="https://namu.ua/" class="lection__description-container">
+            <div class="lection__description-block">
+              <div class="lection__date-block">
+                <div class="lection__name">
+                  ЛЕКЦІЯ
+                </div>
+
+                <div class="lection__date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <div class="lection__details-block">
+                <div class="lection__title">
+                  Від класицизму до романтизму
+                </div>
+
+                <div class="lection__description"></div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <!-- SUBSCRIBE -->
+    <div class="subscribe" id="subscribe">
+      <div class="subscribe__description">
+        <div class="subscribe__title">Підписка</div>
+        <div class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+      </div>
+      <div class="subscribe__area">
+        <form
+          name="subscribe"
+          action="http://localhost:3000/api"
+          method="get"
+          class="subscribe__form"
+        >
+
+          <div class="subscribe__input-container">
+            <input
+              type="text"
+              name="subscribe-input"
+              class="subscribe__input"
+              placeholder="E-mail"
+            >
+          </div>
+
+          <button name="subscribe-button" class="subscribe__button">
+            <div class="subscribe__button-arrow"></div>
+          </button>
+      </form>
+      </div>
+    </div>
+
     <!-- FOOTER -->
-    <div class="footer">
+    <div class="footer" id="footer">
       <div class="arc">
         <div class="footer__content">
           <div class="grid grid--screen">
