subscribe-button fixed

--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,9 @@
           </div>
 
           <button name="subscribe-button" class="subscribe__button">
-            <div class="subscribe__button-arrow"></div>
+            <div class="subscribe__button-container">
+              <div class="subscribe__button-arrow"></div>
+            </div>
           </button>
       </form>
       </div>
