all blocks added

--- a/src/index.html
+++ b/src/index.html
@@ -289,6 +289,56 @@
       </div>
     </div>
 
+    <!-- TITLE-BLOCK -->
+    <div class="title-block">
+      <div class="arc">
+        Галерея
+      </div>
+    </div>
+
+    <!-- GALLERY -->
+    <div class="arc">
+      <section class="gallery" id="gallery">
+        <div class="gallery__photo-row">
+          <div class="grid__item--desktop-1-4">
+            <a href="https://namu.ua/" class="gallery__link">
+              <div class="gallery__photo-container gallery--photo-1"></div>
+            </a>
+          </div>
+
+          <div class="grid__item--desktop-5-12">
+            <a href="https://namu.ua/" class="gallery__link">
+              <div class="gallery__photo-container gallery--photo-2"></div>
+            </a>
+          </div>
+        </div>
+
+        <div class="gallery__photo-row gallery__photo-row--second">
+          <div class="grid__item--desktop-1-8">
+            <a href="https://namu.ua/" class="gallery__link">
+              <div class="gallery__photo-container gallery--photo-3"></div>
+            </a>
+          </div>
+
+          <div class="grid__item--desktop-9-12">
+            <a href="https://namu.ua/" class="gallery__link">
+              <div class="gallery__photo-container gallery--photo-4"></div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- DOTS -->
+    <div class="dots-block">
+      <ul class="dots-block__dots-container">
+        <li class="dots-block__dot dots-block__dot--active"></li>
+        <li class="dots-block__dot"></li>
+        <li class="dots-block__dot"></li>
+        <li class="dots-block__dot"></li>
+      </ul>
+    </div>
+
     <!-- SUBSCRIBE -->
     <div class="subscribe" id="subscribe">
       <div class="subscribe__description">
