add link on events and add some details

--- a/src/index.html
+++ b/src/index.html
@@ -111,12 +111,21 @@
 
         <div class="grid grid--desktop">
           <div class="grid__item--desktop-3-5">
-            <a href="#events"class="art-museum__button">
-              <div class="art-museum__link">
-                квитки
+            <div class="art-museum__buttons-wrap">
+              <div class="art-museum__events-wrap">
+                <a href="#events" class="art-museum__events-click">
+                  події
+                  <div class="art-museum__events-click-line"></div>
+                </a>
               </div>
-              <span class="art-museum__link-button"></span>
-            </a>
+
+              <a href="#events"class="art-museum__button">
+                <div class="art-museum__link">
+                  квитки
+                </div>
+                <span class="art-museum__link-button"></span>
+              </a>
+            </div>
           </div>
         </div>
 
