some little changes

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 
     <!-- HEADER -->
-    <div class="header" id="header">
+    <header class="header" id="header">
       <div class="header__background-container">
         <div class="header__background-image"></div>
 
@@ -43,9 +43,9 @@
           <div class="grid grid--screen">
             <div class="grid__item--desktop-1-5"
             >
-              <div class="header__title">
+              <h1 class="header__title">
                 художній<br>музей
-              </div>
+              </h1>
             </div>
           </div>
 
@@ -67,10 +67,10 @@
           <div class="header__line"></div>
         </div>
       </div>
-    </div>
+    </header>
 
     <!-- MENU -->
-    <div class="page__menu menu" id="menu">
+    <section class="page__menu menu" id="menu">
       <div class="menu__container">
         <div class="arc">
           <div class="menu__content">
@@ -86,7 +86,7 @@
                   </a>
 
                   <!-- NAV-BLOCK -->
-                  <div class="nav-block">
+                  <nav class="nav-block">
                     <ul class="nav-block__list">
                       <div class="nav-block__group">
                         <li class="nav-block__item">
@@ -116,7 +116,7 @@
                         </li>
                       </div>
                     </ul>
-                  </div>
+                  </nav>
                 </div>
               </div>
 
@@ -126,7 +126,7 @@
               >
                 <div class="menu__right-block">
                   <!-- SCHEDULE-BLOCK -->
-                  <div class="schedule-block">
+                  <section class="schedule-block">
                     <div class="schedule-block__title">
                       Графік роботи
                     </div>
@@ -145,7 +145,7 @@
                         Каса припиняє роботу за 1 годину до закриття музею
                       </div>
                     </div>
-                  </div>
+                  </section>
                 </div>
               </div>
             </div>
@@ -154,7 +154,7 @@
       </div>
 
       <div class="menu__grey-zone"></div>
-    </div>
+    </section>
 
     <!-- TITLE-BLOCK -->
     <div class="title-block">
@@ -259,7 +259,7 @@
     </div>
 
     <!-- LECTION -->
-    <div class="lection" id="lection">
+    <section class="lection" id="lection">
       <div class="lection__container">
         <div class="lection__photo">
 
@@ -286,8 +286,7 @@
           </a>
         </div>
       </div>
-      </div>
-    </div>
+    </section>
 
     <!-- TITLE-BLOCK -->
     <div class="title-block">
@@ -340,7 +339,7 @@
     </div>
 
     <!-- SUBSCRIBE -->
-    <div class="subscribe" id="subscribe">
+    <section class="subscribe" id="subscribe">
       <div class="subscribe__description">
         <div class="subscribe__title">Підписка</div>
         <div class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
@@ -367,12 +366,12 @@
               <div class="subscribe__button-arrow"></div>
             </div>
           </button>
-      </form>
+        </form>
       </div>
-    </div>
+    </section>
 
     <!-- FOOTER -->
-    <div class="footer" id="footer">
+    <section class="footer" id="footer">
       <div class="arc">
         <div class="footer__content">
           <div class="grid grid--screen">
@@ -496,6 +495,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
