--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,16 @@
     <title>NAMU landing</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./main.css">
-    <link rel="icon" type="image/x-icon" href="./images/NA MU.svg">
+    <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NA MU.svg"
+    >
   </head>
 
   <body class="page">
@@ -133,15 +137,15 @@
 
                     <div class="schedule-block__container">
                       <div class="schedule-block__time">
-                        <b>12:00 — 20:00</b> середа<br>
-                        <b>12:00 — 20:00</b> четвер<br>
-                        <b>12:00 — 20:00</b> п’ятниця<br>
-                        <b>11:00 — 19:00</b> субота<br>
-                        <b>11:00 — 19:00</b> неділя<br>
+                        <span class="schedule-block__bold">12:00 — 20:00</span> середа<br>
+                        <span class="schedule-block__bold">12:00 — 20:00</span> четвер<br>
+                        <span class="schedule-block__bold">12:00 — 20:00</span> п’ятниця<br>
+                        <span class="schedule-block__bold">11:00 — 19:00</span> субота<br>
+                        <span class="schedule-block__bold">11:00 — 19:00</span> неділя<br>
                       </div>
 
                       <div class="schedule-block__days">
-                        <b>Вихідні:</b> понеділок, вівторок<br>
+                        <span class="schedule-block__bold">Вихідні:</span> понеділок, вівторок<br>
                         Каса припиняє роботу за 1 годину до закриття музею
                       </div>
                     </div>
@@ -164,7 +168,7 @@
     </div>
 
     <!-- EVENT`s -->
-    <div class="arc" id="events">
+    <div class="arc">
       <section class="events" id="events">
         <div class="grid grid--screen">
           <div class="
@@ -172,7 +176,10 @@
             grid__item--tablet-1-6"
           >
             <div class="events__photo-container">
-              <img src="./images/Rectangle-2.3.jpg" alt="Йду і повертаюсь" class="events__photo">
+              <img
+                src="./images/Rectangle-2.3.jpg"
+                alt="Йду і повертаюсь"
+                class="events__photo">
             </div>
           </div>
 
@@ -218,7 +225,10 @@
             grid__item--tablet-1-6"
           >
             <div class="events__photo-container">
-              <img src="./images/Rectangle-4.3.jpg" alt="І спогади і мрії" class="events__photo">
+              <img
+                src="./images/Rectangle-4.3.jpg"
+                alt="І спогади і мрії"
+                class="events__photo">
             </div>
           </div>
 
@@ -391,102 +401,102 @@
               </div>
             </div>
 
-              <div class="
-                grid__item--tablet-2-5
-                grid__item--desktop-3-6"
-              >
-                <div class="footer__description">
-                  <!-- SCHEDULE-BLOCK -->
-                  <div class="schedule-block schedule-block--footer">
-                    <div class="schedule-block__title">
-                      Графік роботи
-                    </div>
+            <div class="
+              grid__item--tablet-2-5
+              grid__item--desktop-3-6"
+            >
+              <div class="footer__description">
+                <!-- SCHEDULE-BLOCK -->
+                <div class="schedule-block schedule-block--footer">
+                  <div class="schedule-block__title">
+                    Графік роботи
+                  </div>
 
-                    <div class="schedule-block__container schedule-block__container--footer">
-                      <div class="schedule-block__time schedule-block__time--footer">
-                        <b>12:00 — 20:00</b> середа<br>
-                        <b>12:00 — 20:00</b> четвер<br>
-                        <b>12:00 — 20:00</b> п’ятниця<br>
-                        <b>11:00 — 19:00</b> субота<br>
-                        <b>11:00 — 19:00</b> неділя<br>
-                        <br>
-                        Вихідні: понеділок, вівторок<br>
-                        Каса припиняє роботу за 1 годину до закриття музею
-                      </div>
+                  <div class="schedule-block__container schedule-block__container--footer">
+                    <div class="schedule-block__time schedule-block__time--footer">
+                      <span class="schedule-block__bold">12:00 — 20:00</span> середа<br>
+                      <span class="schedule-block__bold">12:00 — 20:00</span> четвер<br>
+                      <span class="schedule-block__bold">12:00 — 20:00</span> п’ятниця<br>
+                      <span class="schedule-block__bold">11:00 — 19:00</span> субота<br>
+                      <span class="schedule-block__bold">11:00 — 19:00</span> неділя<br>
+                      <br>
+                      Вихідні: понеділок, вівторок<br>
+                      Каса припиняє роботу за 1 годину до закриття музею
+                    </div>
+                  </div>
+                </div>
+
+                <!-- SCHEDULE-BLOCK -->
+                <div class="schedule-block schedule-block--footer">
+                  <div class="schedule-block__title">
+                    Контакти
+                  </div>
+
+                  <div class="schedule-block__container schedule-block__container--footer">
+                    <div class="
+                      schedule-block__time
+                      schedule-block__time--footer
+                      schedule-block__time--footer-arrow"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001<br>
+                      тел. +38 (044) 278&#8209;13&#8209;57<br>
+                      факс +38 (044) 278&#8209;74&#8209;54<br>
+                      e-mail: info@namu.kiev.ua
                     </div>
                   </div>
 
-                  <!-- SCHEDULE-BLOCK -->
-                  <div class="schedule-block schedule-block--footer">
-                    <div class="schedule-block__title">
-                      Контакти
-                    </div>
-
-                    <div class="schedule-block__container schedule-block__container--footer">
-                      <div class="
-                        schedule-block__time
-                        schedule-block__time--footer
-                        schedule-block__time--footer-arrow"
-                      >
-                        вул. М. Грушевського, 6; Київ, 01001<br>
-                        тел. +38 (044) 278&#8209;13&#8209;57<br>
-                        факс +38 (044) 278&#8209;74&#8209;54<br>
-                        e-mail: info@namu.kiev.ua
-                      </div>
-                    </div>
-
-                    <div class="footer__up-arrow">
-                      <a href="#header" class="icon icon--up-arrow"></a>
-                    </div>
-
+                  <div class="footer__up-arrow">
+                    <a href="#header" class="icon icon--up-arrow"></a>
                   </div>
+
                 </div>
               </div>
+            </div>
 
-              <div class="
-                grid__item--desktop-7-7"
-              >
-                <div class="footer__line">
-                </div>
+            <div class="
+              grid__item--desktop-7-7"
+            >
+              <div class="footer__line">
               </div>
+            </div>
 
-              <!-- NAV-BLOCK -->
-              <div class="
-                grid__item--tablet-2-5
-                grid__item--desktop-8-11"
-              >
-                <div class="nav-block nav-block--footer">
-                  <ul class="nav-block__list">
-                    <div class="nav-block__group nav-block__group--footer">
-                      <li class="nav-block__item">
-                        <a href="#" class="nav-block__link nav-block__link--footer">
-                          Галерея
-                        </a>
-                      </li>
+            <!-- NAV-BLOCK -->
+            <div class="
+              grid__item--tablet-2-5
+              grid__item--desktop-8-11"
+            >
+              <div class="nav-block nav-block--footer">
+                <ul class="nav-block__list">
+                  <div class="nav-block__group nav-block__group--footer">
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link nav-block__link--footer">
+                        Галерея
+                      </a>
+                    </li>
 
-                      <li class="nav-block__item">
-                        <a href="#" class="nav-block__link nav-block__link--footer">
-                          Виставки та події
-                        </a>
-                      </li>
-                    </div>
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link nav-block__link--footer">
+                        Виставки та події
+                      </a>
+                    </li>
+                  </div>
 
-                    <div class="nav-block__group nav-block__group--footer">
-                      <li class="nav-block__item">
-                        <a href="#" class="nav-block__link nav-block__link--footer">
-                          Про нас
-                        </a>
-                      </li>
+                  <div class="nav-block__group nav-block__group--footer">
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link nav-block__link--footer">
+                        Про нас
+                      </a>
+                    </li>
 
-                      <li class="nav-block__item">
-                        <a href="#" class="nav-block__link nav-block__link--footer">
-                          Контакти
-                        </a>
-                      </li>
-                    </div>
-                  </ul>
-                </div>
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link nav-block__link--footer">
+                        Контакти
+                      </a>
+                    </li>
+                  </div>
+                </ul>
               </div>
+            </div>
           </div>
 
           <div class="footer__authors">
