--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,15 @@
   </head>
   <body class="page__body">
     <header class="header" id="home">
-      <div class="header__top-nav">
-        <div class="header__top-nav__museum grid__item--desktop-6-12 grid__item--tablet-4-6">
+      <div class="header__top-nav grid grid--tablet grid--desktop">
+        <div class="header__top-nav__museum grid__item--tablet-4-6 grid__item--desktop-6-12">
         </div>
-        <div class="header__top-nav__container grid grid--desktop grid--tablet">
+        <div class="header__top-nav__container
+          grid__item--tablet-1-5
+          grid__item--desktop-1-7">
           <a
             href="#menu"
-            class="header__top-nav__link grid__item--desktop-1-2"
+            class="header__top-nav__link"
             title="menu">
             <img
               src="./images/signs/menu.svg"
@@ -34,7 +36,7 @@
           </a>
           <a
             href="#"
-            class="header__top-nav__logo grid__item--desktop-6-7 grid__item--tablet-5-6"
+            class="header__top-nav__logo"
             title="logo">
             <img
               src="./images/signs/NAMU.svg"
@@ -43,16 +45,20 @@
           </a>
         </div>
 
-        <div class="header__top-nav__name header__top-nav__name--h grid grid--desktop grid--tablet">
-          <h1 class="header__top-nav__name__item">ХУДОЖНІЙ </h1>
-        </div>
-        <div class="header__top-nav__name header__top-nav__name--m grid grid--desktop grid--tablet">
-          <h1 class="header__top-nav__name__item">МУЗЕЙ</h1>
+        <div class="grid__item--tablet-1-3 grid__item--desktop-1-5">
+          <div class="header__top-nav__name
+            header__top-nav__name--h">
+            <h1 class="header__top-nav__name__item">ХУДОЖНІЙ </h1>
+          </div>
+          <div class="header__top-nav__name
+            header__top-nav__name--m">
+            <h1 class="header__top-nav__name__item">МУЗЕЙ</h1>
+          </div>
         </div>
         <a
           href="#gallery"
           title="gallery"
-          class="header__top-nav__tickets">
+          class="header__top-nav__tickets grid__item--tablet-1-3">
           <div class="header__top-nav__tickets__container">
           </div>
           КВИТКИ
@@ -61,7 +67,7 @@
         <a
           href="#events"
           title="events"
-          class="header__top-nav__act">
+          class="header__top-nav__act grid__item--desktop-1-1">
           <p class="header__top-nav__act__actions">ПОДІЇ</p>
         </a>
       </div>
